# Spoti-find

./: .gitignore  ChromatorgaphyCalibration.txt  LICENSE  Spoti-Find  Spoti-Find.command  VSAValidationData.csv  Validation Data  calibration.txt  calibrationBlank.txt  debug_stack.tif  dist_map.tif  install_instructions.txt  pyproject.toml  readme.md  requirements_conda.txt  requirements_pip.txt  session.txt  spoti_find_enviroment.yaml  start_vsa.sh
Calibration/: Whatmancalibration.txt  calibrationBlank.txt
Validation/: VSAValidationData.csv  ValidationICC.R
Validation Data/: Description.md
__MACOSX/vsa_0_019/: ._calibration.txt  ._session.txt
__MACOSX/vsa_0_019/test_data/: ._calib sheet1.tif  ._calib sheet2.tif  ._calibration_sheet_spot_types.tif  ._ruler.tif  ._test_8bit.tif  ._test_8bit_low_contrast.tif
spoti_find/: __init__.py  __main__.py
spoti_find/src/: __init__.py  area_volume_map.py  polygon_tools.py  test_polygon_tools.py  vsa.py  vsa_gui.py  vsa_viewer.py
src/: area_volume_map.py  polygon_tools.py  test_polygon_tools.py  vsa.py  vsa_gui.py  vsa_viewer.py
test_data/: T1.csv  calib sheet1.tif  calib sheet2.tif  calibration_sheet_spot_types.tif  extended_img.tif  ruler.tif  test_16bit.tif  test_8bit.tif  test_8bit_low_contrast.tif  test_stack.tif
vsa/: __init__.py  __main__.py
vsa/src/: polygon_tools.py  vsa.py  vsa_viewer.py
