[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "void-spot-assay"
version = "2025.0.0a1"
dependencies = [
    "numpy==1.24.2",
    "opencv-python==4.7.0.72",
    "PyQt6==6.5.2",
    "PyQt6-Qt6==6.5.2",
    "PyQt6-sip==13.5.2"
]
requires-python = "== 3.11.11"
readme = "readme.md"
descripion = "VSA PyApp Test"
authors = [{name = "TEST"}]
[tool.hatch.build.targets.wheel]
packages = ["vsa"]