[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "Spoti-Find"
version = "0.1.0"
dependencies = [
    "numpy==1.24.2",
    "opencv-python==4.7.0.72",
    "PyQt6==6.5.2",
    "PyQt6-Qt6==6.5.2",
    "PyQt6-sip==13.5.2"
]
requires-python = "== 3.11.11"
readme = "readme.md"
descripion = "Spoti-find is a robust analysis tool that allows easy and flexible quantification of Void Spot Assays (VSAs)."
authors = [
    {name = "Cara C. Hardy"},
    {name = "Susan Sheehan"},
    {name = "Jim Peterson"},
    {name = "Garry Churchill"},
    {name = "Stephen J. Crocker"},
    {name = "Zaenab S. Dhari"},
    {name = "Warren G. Hill"},
    {name = "Matt Mahoney", email = "matt.mahoney@jax.org"},
    {name = "Seamus Mawe"},
    {name = "Will Ricke"},
    {name = "Nick Sebasco"},
    {name = "Abigale Brackett"},
    {name = "Kevin Koegel"},
    {name = "Samantha Spellacy"},
    {name = "Ron Korstanje"}]
[tool.hatch.build.targets.wheel]
packages = ["spoti_find"]